# performance_tester

./: .gitignore  Dockerfile  README.md
_config_k8s/: app-job.yml  app-server.yml  measure.sh
client/: Cargo.toml
client/src/: lib.rs  main.rs
logger/: Cargo.toml
logger/src/: lib.rs  logging.rs
server/: Cargo.toml
server/src/: main.rs
